Fix warnings in the `sandbox` module
- Replace `Function` construction with lambdas.
- Fix generic class usages.
- Remove unnecessary `throws` declarations.
- Use `try-with-resource` where necessary.
- Use `assertNull()` instead of `assertEquals()` with a `null` argument.
- Fix typo.